Fix some spacing issues
This should fix most of the existing spacing issues.

--- a/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/site.css
+++ b/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/site.css
@@ -16,8 +16,11 @@ body {
 
 #content-wrapper {
   min-height: 100vh;
-  position: relative;
-  margin-left: 70px; }
+  position: relative; }
+  #content-wrapper.navbar-offset {
+    margin-left: 70px; }
+  #content-wrapper.header-offset {
+    padding-top: 50px; }
 
 input {
   height: 40px;
@@ -151,31 +154,19 @@ Footer Styling
 /*****
 Content Block Styling
 *****/
-#content {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 80px 0 0 70px; }
-  #content h1 {
-    font-weight: bolder; }
-
 #iframe-container {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden; }
   #iframe-container iframe {
     position: absolute;
     top: 0;
     left: 0;
-    overflow: hidden;
-    padding-left: 70px;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    transform: scale(1);
+    transform-origin: top left; }
 
 /*****
 Report Block Styling
